coriolis/parser/JarlParser.py
# Generated from Jarl.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class JarlParser (Parser):

    grammarFileName = "Jarl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "','", "'('", "')'", "<INVALID>", "'after'",
                    "'and'", "'any'", "'at'", "'before'", "'between'",
                    "'every'", "'for'", "'happen'", "'least'", "'most'",
                    "'must'", "'next'", "'not'", "'precede'", "'previous'",
                    "'rule'", "'times'", "'with'", "<INVALID>", "<INVALID>",
                    "':'"]

    symbolicNames = ["<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "COMPARATOR", "AFTER", "AND", "ANY", "AT", "BEFORE",
                     "BETWEEN", "EVERY", "FOR", "HAPPEN", "LEAST", "MOST",
                     "MUST", "NEXT", "NOT", "PRECEDE", "PREVIOUS", "RULE",
                     "TIMES", "WITH", "NUMBER", "IDENTIFIER", "COLON",
                     "LITERAL_STR", "WHITESPACE", "NEWLINE", "COMMENT"]

    RULE_jarl = 0
    RULE_jarl_rule = 1
    RULE_rule_header = 2
    RULE_rule_scope = 3
    RULE_rule_fact = 4
    RULE_header_expr = 5
    RULE_selector_expr = 6
    RULE_filter_expr = 7
    RULE_fact_expr = 8
    RULE_quantifier_clause = 9
    RULE_with_clause = 10
    RULE_after_clause = 11
    RULE_before_clause = 12
    RULE_between_clause = 13
    RULE_fact_clause = 14
    RULE_requirement = 15
    RULE_requirement_count = 16
    RULE_requirement_order = 17
    RULE_how_many = 18
    RULE_condition_list = 19
    RULE_condition = 20
    RULE_quantifier = 21
    RULE_arguments = 22
    RULE_identifier_list = 23
    RULE_checkpoint = 24
    RULE_literal = 25

    ruleNames = ["jarl", "jarl_rule", "rule_header", "rule_scope", "rule_fact",
                 "header_expr", "selector_expr", "filter_expr", "fact_expr",
                 "quantifier_clause", "with_clause", "after_clause", "before_clause",
                 "between_clause", "fact_clause", "requirement", "requirement_count",
                 "requirement_order", "how_many", "condition_list", "condition",
                 "quantifier", "arguments", "identifier_list", "checkpoint",
                 "literal"]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    COMPARATOR = 4
    AFTER = 5
    AND = 6
    ANY = 7
    AT = 8
    BEFORE = 9
    BETWEEN = 10
    EVERY = 11
    FOR = 12
    HAPPEN = 13
    LEAST = 14
    MOST = 15
    MUST = 16
    NEXT = 17
    NOT = 18
    PRECEDE = 19
    PREVIOUS = 20
    RULE = 21
    TIMES = 22
    WITH = 23
    NUMBER = 24
    IDENTIFIER = 25
    COLON = 26
    LITERAL_STR = 27
    WHITESPACE = 28
    NEWLINE = 29
    COMMENT = 30

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class JarlContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(JarlParser.EOF, 0)

        def jarl_rule(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(JarlParser.Jarl_ruleContext)
            else:
                return self.getTypedRuleContext(JarlParser.Jarl_ruleContext, i)

        def getRuleIndex(self):
            return JarlParser.RULE_jarl

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterJarl"):
                listener.enterJarl(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitJarl"):
                listener.exitJarl(self)

    def jarl(self):

        localctx = JarlParser.JarlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_jarl)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == JarlParser.RULE or _la == JarlParser.NEWLINE:
                self.state = 52
                self.jarl_rule()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self.match(JarlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Jarl_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rule_header(self):
            return self.getTypedRuleContext(JarlParser.Rule_headerContext, 0)

        def rule_fact(self):
            return self.getTypedRuleContext(JarlParser.Rule_factContext, 0)

        def NEWLINE(self, i: int = None):
            if i is None:
                return self.getTokens(JarlParser.NEWLINE)
            else:
                return self.getToken(JarlParser.NEWLINE, i)

        def rule_scope(self):
            return self.getTypedRuleContext(JarlParser.Rule_scopeContext, 0)

        def getRuleIndex(self):
            return JarlParser.RULE_jarl_rule

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterJarl_rule"):
                listener.enterJarl_rule(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitJarl_rule"):
                listener.exitJarl_rule(self)

    def jarl_rule(self):

        localctx = JarlParser.Jarl_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_jarl_rule)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == JarlParser.NEWLINE:
                self.state = 60
                self.match(JarlParser.NEWLINE)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.rule_header()
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
            if la_ == 1:
                self.state = 67
                self.rule_scope()

            self.state = 70
            self.rule_fact()
            self.state = 74
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 3, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 71
                    self.match(JarlParser.NEWLINE)
                self.state = 76
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 3, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Rule_headerContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def header_expr(self):
            return self.getTypedRuleContext(JarlParser.Header_exprContext, 0)

        def getRuleIndex(self):
            return JarlParser.RULE_rule_header

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRule_header"):
                listener.enterRule_header(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRule_header"):
                listener.exitRule_header(self)

    def rule_header(self):

        localctx = JarlParser.Rule_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_rule_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.header_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Rule_scopeContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selector_expr(self):
            return self.getTypedRuleContext(JarlParser.Selector_exprContext, 0)

        def filter_expr(self):
            return self.getTypedRuleContext(JarlParser.Filter_exprContext, 0)

        def getRuleIndex(self):
            return JarlParser.RULE_rule_scope

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRule_scope"):
                listener.enterRule_scope(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRule_scope"):
                listener.exitRule_scope(self)

    def rule_scope(self):

        localctx = JarlParser.Rule_scopeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_rule_scope)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == JarlParser.FOR:
                self.state = 79
                self.filter_expr()

            self.state = 82
            self.selector_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Rule_factContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fact_expr(self):
            return self.getTypedRuleContext(JarlParser.Fact_exprContext, 0)

        def filter_expr(self):
            return self.getTypedRuleContext(JarlParser.Filter_exprContext, 0)

        def getRuleIndex(self):
            return JarlParser.RULE_rule_fact

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRule_fact"):
                listener.enterRule_fact(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRule_fact"):
                listener.exitRule_fact(self)

    def rule_fact(self):

        localctx = JarlParser.Rule_factContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_rule_fact)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == JarlParser.FOR:
                self.state = 84
                self.filter_expr()

            self.state = 87
            self.fact_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Header_exprContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RULE(self):
            return self.getToken(JarlParser.RULE, 0)

        def IDENTIFIER(self):
            return self.getToken(JarlParser.IDENTIFIER, 0)

        def NEWLINE(self):
            return self.getToken(JarlParser.NEWLINE, 0)

        def getRuleIndex(self):
            return JarlParser.RULE_header_expr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterHeader_expr"):
                listener.enterHeader_expr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitHeader_expr"):
                listener.exitHeader_expr(self)

    def header_expr(self):

        localctx = JarlParser.Header_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_header_expr)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(JarlParser.RULE)
            self.state = 90
            self.match(JarlParser.IDENTIFIER)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == JarlParser.NEWLINE:
                self.state = 91
                self.match(JarlParser.NEWLINE)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Selector_exprContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def after_clause(self):
            return self.getTypedRuleContext(JarlParser.After_clauseContext, 0)

        def before_clause(self):
            return self.getTypedRuleContext(JarlParser.Before_clauseContext, 0)

        def between_clause(self):
            return self.getTypedRuleContext(JarlParser.Between_clauseContext, 0)

        def COLON(self):
            return self.getToken(JarlParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(JarlParser.NEWLINE, 0)

        def getRuleIndex(self):
            return JarlParser.RULE_selector_expr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSelector_expr"):
                listener.enterSelector_expr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSelector_expr"):
                listener.exitSelector_expr(self)

    def selector_expr(self):

        localctx = JarlParser.Selector_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_selector_expr)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JarlParser.AFTER]:
                self.state = 94
                self.after_clause()
                pass
            elif token in [JarlParser.BEFORE]:
                self.state = 95
                self.before_clause()
                pass
            elif token in [JarlParser.BETWEEN]:
                self.state = 96
                self.between_clause()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == JarlParser.COLON:
                self.state = 99
                self.match(JarlParser.COLON)

            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == JarlParser.NEWLINE:
                self.state = 102
                self.match(JarlParser.NEWLINE)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Filter_exprContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(JarlParser.FOR, 0)

        def quantifier_clause(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(JarlParser.Quantifier_clauseContext)
            else:
                return self.getTypedRuleContext(JarlParser.Quantifier_clauseContext, i)

        def AND(self, i: int = None):
            if i is None:
                return self.getTokens(JarlParser.AND)
            else:
                return self.getToken(JarlParser.AND, i)

        def with_clause(self):
            return self.getTypedRuleContext(JarlParser.With_clauseContext, 0)

        def COLON(self):
            return self.getToken(JarlParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(JarlParser.NEWLINE, 0)

        def getRuleIndex(self):
            return JarlParser.RULE_filter_expr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFilter_expr"):
                listener.enterFilter_expr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFilter_expr"):
                listener.exitFilter_expr(self)

    def filter_expr(self):

        localctx = JarlParser.Filter_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_filter_expr)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(JarlParser.FOR)
            self.state = 106
            self.quantifier_clause()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == JarlParser.AND:
                self.state = 107
                self.match(JarlParser.AND)
                self.state = 108
                self.quantifier_clause()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == JarlParser.WITH:
                self.state = 114
                self.with_clause()

            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == JarlParser.COLON:
                self.state = 117
                self.match(JarlParser.COLON)

            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == JarlParser.NEWLINE:
                self.state = 120
                self.match(JarlParser.NEWLINE)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fact_exprContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fact_clause(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(JarlParser.Fact_clauseContext)
            else:
                return self.getTypedRuleContext(JarlParser.Fact_clauseContext, i)

        def NEWLINE(self, i: int = None):
            if i is None:
                return self.getTokens(JarlParser.NEWLINE)
            else:
                return self.getToken(JarlParser.NEWLINE, i)

        def getRuleIndex(self):
            return JarlParser.RULE_fact_expr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFact_expr"):
                listener.enterFact_expr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFact_expr"):
                listener.exitFact_expr(self)

    def fact_expr(self):

        localctx = JarlParser.Fact_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_fact_expr)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.fact_clause()
            self.state = 130
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 15, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 125
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la == JarlParser.NEWLINE:
                        self.state = 124
                        self.match(JarlParser.NEWLINE)

                    self.state = 127
                    self.fact_clause()
                self.state = 132
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 15, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Quantifier_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def quantifier(self):
            return self.getTypedRuleContext(JarlParser.QuantifierContext, 0)

        def identifier_list(self):
            return self.getTypedRuleContext(JarlParser.Identifier_listContext, 0)

        def getRuleIndex(self):
            return JarlParser.RULE_quantifier_clause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterQuantifier_clause"):
                listener.enterQuantifier_clause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitQuantifier_clause"):
                listener.exitQuantifier_clause(self)

    def quantifier_clause(self):

        localctx = JarlParser.Quantifier_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_quantifier_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.quantifier()
            self.state = 134
            self.identifier_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class With_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WITH(self):
            return self.getToken(JarlParser.WITH, 0)

        def condition_list(self):
            return self.getTypedRuleContext(JarlParser.Condition_listContext, 0)

        def getRuleIndex(self):
            return JarlParser.RULE_with_clause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterWith_clause"):
                listener.enterWith_clause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitWith_clause"):
                listener.exitWith_clause(self)

    def with_clause(self):

        localctx = JarlParser.With_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_with_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(JarlParser.WITH)
            self.state = 137
            self.condition_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class After_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AFTER(self):
            return self.getToken(JarlParser.AFTER, 0)

        def checkpoint(self):
            return self.getTypedRuleContext(JarlParser.CheckpointContext, 0)

        def getRuleIndex(self):
            return JarlParser.RULE_after_clause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAfter_clause"):
                listener.enterAfter_clause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAfter_clause"):
                listener.exitAfter_clause(self)

    def after_clause(self):

        localctx = JarlParser.After_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_after_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(JarlParser.AFTER)
            self.state = 140
            self.checkpoint()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Before_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEFORE(self):
            return self.getToken(JarlParser.BEFORE, 0)

        def checkpoint(self):
            return self.getTypedRuleContext(JarlParser.CheckpointContext, 0)

        def getRuleIndex(self):
            return JarlParser.RULE_before_clause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBefore_clause"):
                listener.enterBefore_clause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBefore_clause"):
                listener.exitBefore_clause(self)

    def before_clause(self):

        localctx = JarlParser.Before_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_before_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(JarlParser.BEFORE)
            self.state = 143
            self.checkpoint()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Between_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BETWEEN(self):
            return self.getToken(JarlParser.BETWEEN, 0)

        def checkpoint(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(JarlParser.CheckpointContext)
            else:
                return self.getTypedRuleContext(JarlParser.CheckpointContext, i)

        def AND(self):
            return self.getToken(JarlParser.AND, 0)

        def NEXT(self):
            return self.getToken(JarlParser.NEXT, 0)

        def PREVIOUS(self):
            return self.getToken(JarlParser.PREVIOUS, 0)

        def getRuleIndex(self):
            return JarlParser.RULE_between_clause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBetween_clause"):
                listener.enterBetween_clause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBetween_clause"):
                listener.exitBetween_clause(self)

    def between_clause(self):

        localctx = JarlParser.Between_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_between_clause)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(JarlParser.BETWEEN)
            self.state = 146
            self.checkpoint()
            self.state = 147
            self.match(JarlParser.AND)
            self.state = 148
            _la = self._input.LA(1)
            if not(_la == JarlParser.NEXT or _la == JarlParser.PREVIOUS):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 149
            self.checkpoint()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fact_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def checkpoint(self):
            return self.getTypedRuleContext(JarlParser.CheckpointContext, 0)

        def requirement(self):
            return self.getTypedRuleContext(JarlParser.RequirementContext, 0)

        def getRuleIndex(self):
            return JarlParser.RULE_fact_clause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFact_clause"):
                listener.enterFact_clause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFact_clause"):
                listener.exitFact_clause(self)

    def fact_clause(self):

        localctx = JarlParser.Fact_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_fact_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.checkpoint()
            self.state = 152
            self.requirement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RequirementContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def requirement_count(self):
            return self.getTypedRuleContext(JarlParser.Requirement_countContext, 0)

        def requirement_order(self):
            return self.getTypedRuleContext(JarlParser.Requirement_orderContext, 0)

        def getRuleIndex(self):
            return JarlParser.RULE_requirement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRequirement"):
                listener.enterRequirement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRequirement"):
                listener.exitRequirement(self)

    def requirement(self):

        localctx = JarlParser.RequirementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_requirement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 16, self._ctx)
            if la_ == 1:
                self.state = 154
                self.requirement_count()
                pass

            elif la_ == 2:
                self.state = 155
                self.requirement_order()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Requirement_countContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MUST(self):
            return self.getToken(JarlParser.MUST, 0)

        def HAPPEN(self):
            return self.getToken(JarlParser.HAPPEN, 0)

        def NOT(self):
            return self.getToken(JarlParser.NOT, 0)

        def how_many(self):
            return self.getTypedRuleContext(JarlParser.How_manyContext, 0)

        def getRuleIndex(self):
            return JarlParser.RULE_requirement_count

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRequirement_count"):
                listener.enterRequirement_count(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRequirement_count"):
                listener.exitRequirement_count(self)

    def requirement_count(self):

        localctx = JarlParser.Requirement_countContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_requirement_count)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(JarlParser.MUST)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == JarlParser.NOT:
                self.state = 159
                self.match(JarlParser.NOT)

            self.state = 162
            self.match(JarlParser.HAPPEN)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == JarlParser.AT or _la == JarlParser.NUMBER:
                self.state = 163
                self.how_many()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Requirement_orderContext(ParserRuleContext):
